--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -12,4 +12,14 @@
         <item>bypass-china</item>
     </string-array>
 
+    <string-array name="protocol_entry">
+        <item>TCP</item>
+        <item>UDP</item>
+    </string-array>
+
+    <string-array name="protocol_value" translatable="false">
+        <item>1</item>
+        <item>2</item>
+    </string-array>
+
 </resources>
