--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -22,7 +22,7 @@
 
         <io.github.xTun.preferences.SummaryEditTextPreference
             android:inputType="number"
-            android:defaultValue="1440"
+            android:defaultValue="1426"
             android:key="mtu"
             android:summary="@string/mtu_summary"
             android:title="@string/mtu"
@@ -64,6 +64,14 @@
 
     <PreferenceCategory
             android:title="@string/feature_cat">
+
+        <io.github.xTun.preferences.SummaryListPreference
+            android:defaultValue="2"
+            android:key="protocol"
+            android:entries="@array/protocol_entry"
+            android:entryValues="@array/protocol_value"
+            android:title="@string/protocol_list">
+        </io.github.xTun.preferences.SummaryListPreference>
 
         <io.github.xTun.preferences.SummaryListPreference
                 android:defaultValue="all"
