--- a/app/src/main/res/layout/activity_app_manager.xml
+++ b/app/src/main/res/layout/activity_app_manager.xml
@@ -2,6 +2,8 @@
 
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -12,34 +14,81 @@
         android:layout_height="?attr/actionBarSize"
         android:background="?attr/colorPrimary">
 
-        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
+            <!--<TextView-->
+                <!--android:id="@+id/bypassLabel"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_alignParentStart="true"-->
+                <!--android:layout_centerVertical="true"-->
+                <!--android:gravity="center_vertical"-->
+                <!--android:text="@string/proxied_apps_mode"-->
+                <!--android:textColor="@color/tool_title"-->
+            <!--app:layout_constraintBottom_toBottomOf="@+id/bypassGroup"-->
+
+            <!--android:textSize="@dimen/toolTextSizeSmall" />-->
+
             <TextView
-                android:id="@+id/bypassLabel"
+                android:id="@+id/tv_mode"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
                 android:layout_centerVertical="true"
-                android:gravity="center_vertical"
-                android:text="@string/proxied_apps"
-                android:textColor="@color/tool_title"
-                android:textSize="@dimen/toolTextSizeSmall" />
+                android:layout_marginStart="6dp"
+                android:minWidth="42dp"
+                android:text="@string/proxied_apps_mode" />
 
-            <Switch
-                android:id="@+id/bypassSwitch"
-                android:layout_width="wrap_content"
+            <RadioGroup
+                android:id="@+id/bypassGroup"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
                 android:layout_centerVertical="true"
-                android:layout_marginEnd="10dp"
-                android:text="@string/bypass_apps"
-                android:textColor="@color/tool_switch"
-                android:enabled="true"
-                android:switchMinWidth="60dp"
-                android:switchTextAppearance="@android:style/TextAppearance.Small.Inverse" />
+                android:layout_marginStart="65dp"
+                android:layout_marginEnd="8dp"
+                android:checkedButton="@id/btn_off"
+                android:orientation="horizontal">
+
+                <RadioButton
+                    android:id="@+id/btn_off"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="@string/off" />
+
+                <RadioButton
+                    android:id="@+id/btn_on"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="@string/on" />
+
+                <RadioButton
+                    android:id="@+id/btn_bypass"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="@string/bypass_apps"
+                    tools:checked="true" />
+            </RadioGroup>
+
+            <!--<Switch-->
+                <!--android:id="@+id/bypassSwitch"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_alignParentEnd="true"-->
+                <!--android:layout_centerVertical="true"-->
+                <!--android:layout_marginEnd="10dp"-->
+                <!--android:text="@string/bypass_apps"-->
+                <!--android:textColor="@color/tool_switch"-->
+                <!--android:enabled="true"-->
+                <!--android:switchMinWidth="60dp"-->
+                <!--android:switchTextAppearance="@android:style/TextAppearance.Small.Inverse" />-->
+
         </RelativeLayout>
+
     </android.support.v7.widget.Toolbar>
 
     <ListView
